--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     text-align: center;
-    background-color: #1F2937;
+    background-color: #6943FF; 
     font-family: 'Inter', sans-serif;
     padding-bottom: 20px;
 }
@@ -12,6 +12,7 @@ body {
     color: white;
     margin-bottom: 40px;
     padding: none;
+    margin-bottom: 0;
 }
 
 #title {
@@ -49,6 +50,10 @@ body {
 
 #bottom-section {
     text-align: center;
+    background-color: #1F2937;
+    height: 100vh;
+    width: 100%;
+    margin-top: 0;
 }
 
 .unit-section {
