--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     text-align: center;
-    background-color: #6943FF; 
+    background: linear-gradient(#6943FF, #1F2937); 
     font-family: 'Inter', sans-serif;
     padding-bottom: 20px;
 }
@@ -11,8 +11,8 @@ body {
     background-color: #6943FF; 
     color: white;
     margin-bottom: 40px;
-    padding: none;
-    margin-bottom: 0;
+    padding: 0px;
+    margin-bottom: 0px;
 }
 
 #title {
@@ -30,7 +30,7 @@ body {
     text-align: center;
     color: white;
     font-size: 60px;
-    padding: 0px 0 0 0;
+    padding: 0px;
     font-family: 'Inter', sans-serif;
     font-weight: bold;
 }
@@ -48,29 +48,35 @@ body {
 }
 
 
+
 #bottom-section {
     text-align: center;
     background-color: #1F2937;
     height: 100vh;
     width: 100%;
-    margin-top: 0;
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
+#wrapper {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 15px;
 }
 
 .unit-section {
     background-color: #273549;
-    color: #CCC1FF;
     width: 500px;
     height: 110px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 25px;
-    color: white;
-    
+    margin-top: 20px;
+    color: white; 
 }
 
 .unit-title {
     color: #CCC1FF;
-    padding-top: 30px;
+    padding-top: 10px;
     font-weight: normal;
 }
 
