--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 body {
     margin: 0;
     text-align: center;
-    background: linear-gradient("#6943FF", "#1F2937"); 
+    background: linear-gradient(#6943FF, #1F2937); 
     font-family: 'Inter', sans-serif;
-    padding-bottom: 20px;
 }
 
 #top-section {
