--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     text-align: center;
-    background: linear-gradient(#6943FF, #1F2937); 
+    background-image: linear-gradient(#6943FF, #1F2937); 
     font-family: 'Inter', sans-serif;
 }
 
