--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     background-image: linear-gradient(#6943FF, #1F2937); 
     font-family: 'Inter', sans-serif;
+    height: 100vh;
 }
 
 #top-section {
@@ -51,7 +52,7 @@ body {
 #bottom-section {
     text-align: center;
     background-color: #1F2937;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin-top: 0px;
     padding-top: 0px;
