--- a/index.css
+++ b/index.css
@@ -1,9 +1,14 @@
 body {
     margin: 0;
     text-align: center;
-    background-image: linear-gradient(#6943FF, #1F2937); 
+    background: linear-gradient(
+        #6943FF 0%,
+        #6943FF 50%,
+        #1F2937 50%,
+        #1F2937 100%
+    );
     font-family: 'Inter', sans-serif;
-    height: 65vh;
+    height: 60vh;
 }
 
 #top-section {
