--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     text-align: center;
     background: linear-gradient(
-        to bottom
+        to bottom,
         #6943FF 0%,
         #6943FF 50%,
         #1F2937 50%,
