--- a/index.css
+++ b/index.css
@@ -1,14 +1,9 @@
 body {
     margin: 0;
     text-align: center;
-    background: linear-gradient(
-        #6943FF 0%,
-        #6943FF 50%,
-        #1F2937 50%,
-        #1F2937 100%
-    );
     font-family: 'Inter', sans-serif;
     height: 63vh;
+    background:#1F2937;
 }
 
 #top-section {
